--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ h1 {
     align-items: center;
 }
 
-#data-control {
+#data-control, #flow-control {
     padding: 0.7rem;
 }
 
@@ -34,15 +34,16 @@ h1 {
 .pillar {
     height: 90%;
     width: 5%;
-    background-color: aqua;
+    background-color: #ac518bbf;
     margin-right: 5px;
+    border-radius: 7px;
 }
 
 #minValue, #maxValue, #count {
     width: 3rem;
 }
 
-#sort {
+#sort, #flow-control {
     display: flex;
     gap: 0.5rem;
 }
@@ -64,7 +65,6 @@ h1 {
 input[type=range] {
     height: 20px;
     -webkit-appearance: none;
-    width: 10%;
   }
   input[type=range]:focus {
     outline: none;
